--- a/index.html
+++ b/index.html
@@ -3,9 +3,83 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>RB - Kombi prevoz</title>
+
+    <meta
+      name="description"
+      content="RB Kombi prevoz - brza pošta, transport i kombi usluge. Pouzdan i brz kombi prevoz u Mrkonjić Gradu, Banja Luci, Jajcu, Ključu i Šipovu. Dostava paketa, selidbe i transport robe."
+    />
+    <meta
+      name="keywords"
+      content="kombi prevoz Mrkonjić Grad, brza pošta Banja Luka, kombi transport Jajce, kombi prevoz Ključ, transport robe Šipovo, selidbe kombijem BiH, dostava paketa kombi prevoz"
+    />
+    <meta name="author" content="RB Kombi Prevoz" />
+
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+
+    <link rel="canonical" href="https://rb-kombi-prevoz-bojanic.netlify.app/" />
+
+    <meta property="og:title" content="RB - Kombi Prevoz" />
+    <meta
+      property="og:description"
+      content="Pouzdan kombi prevoz, brza pošta i transport u Mrkonjić Gradu, Banja Luci, Jajcu, Ključu i Šipovu."
+    />
+    <meta
+      property="og:url"
+      content="https://rb-kombi-prevoz-bojanic.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://rb-kombi-prevoz-bojanic.netlify.app/assets/images/logo.png"
+    />
+
     <link href="./assets/global.css" rel="stylesheet" />
     <link href="./assets/custom.css" rel="stylesheet" />
+    <meta name="geo.region" content="BA-SRP" />
+    <!-- Republika Srpska -->
+    <meta name="geo.placename" content="Mrkonjić Grad" />
+    <meta name="geo.position" content="44.417;17.083" />
+    <!-- Mrkonjić Grad koordinate -->
+    <meta name="ICBM" content="44.417, 17.083" />
+
+    <!-- Ostali gradovi -->
+    <meta name="geo.placename" content="Banja Luka" />
+    <meta name="geo.position" content="44.772;17.191" />
+    <meta name="ICBM" content="44.772, 17.191" />
+
+    <meta name="geo.placename" content="Jajce" />
+    <meta name="geo.position" content="44.343;17.270" />
+    <meta name="ICBM" content="44.343, 17.270" />
+
+    <meta name="geo.placename" content="Ključ" />
+    <meta name="geo.position" content="44.534;16.779" />
+    <meta name="ICBM" content="44.534, 16.779" />
+
+    <meta name="geo.placename" content="Šipovo" />
+    <meta name="geo.position" content="44.283;17.083" />
+    <meta name="ICBM" content="44.283, 17.083" />
+
+    <link
+      rel="icon"
+      type="image/png"
+      href="/assets/favicons/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./assets/favicons/favicon.svg"
+    />
+    <link rel="shortcut icon" href="./assets/favicons/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/favicons/apple-touch-icon.png"
+    />
+    <meta name="apple-mobile-web-app-title" content="RB - Kombi prevoz" />
+    <link rel="manifest" href="./assets/favicons/site.webmanifest" />
   </head>
   <body class="font-sans">
     <div class="w-full">
