--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             >
               <img src="./assets/images/logo.png" height="60" width="60" />
               <div class="flex flex-col sm:flex-row">
-                Transport i &nbsp;
-                <div class="">logistika</div>
+                ТРАНСПОРТ И &nbsp;
+                <div class="">ЛОГИСТИКА</div>
               </div>
             </div>
 
@@ -230,7 +230,7 @@
                 class="text-2xl font-bold text-[color:var(--sunset)] gap-4 flex flex-col"
               >
                 <p class="text-3xl">
-                  Dobrodošli na zvaničnu stranicu firme "РБ Transport i
+                  Dobrodošli na zvaničnu stranicu firme "RB Transport i
                   Logistika".
                 </p>
                 <ul
@@ -238,7 +238,8 @@
                 >
                   <li>
                     Specijalizovani smo za kombi prevoz robe na području -
-                    Mrkonjić-Grada, Banja Luke, Šipova, Jajca te Ključa.
+                    Mrkonjić-Grada, Banja Luke, Šipova, Jajca te Ključa te
+                    cijele Bosne i Hercegovine.
                   </li>
                   <li>
                     Zahvaljujući našem iskustvu i posvećenosti, uspješno smo
@@ -334,11 +335,11 @@
 
           <!-- Services Grid -->
           <div
-            class="grid grid-cols-1 sm:grid-cols-2 gap-x-24 gap-y-8 min-h-[calc(50vh-16px)]"
+            class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-x-24 gap-y-8 min-h-[calc(50vh-16px)]"
           >
             <!-- Box 1 -->
             <div
-              class="py-16 px-4 rounded-lg flex flex-col items-center justify-center font-extrabold text-4xl text-[color:var(--lion)] bg-gradient-dark cursor-pointer hover:scale-105 transition transform h-full"
+              class="text-center py-16 px-4 rounded-lg flex flex-col items-center justify-center font-extrabold text-4xl text-[color:var(--lion)] bg-gradient-dark cursor-pointer hover:scale-105 transition transform h-full"
               onclick="openModal('service1')"
             >
               <svg
@@ -347,7 +348,6 @@
                 height="128"
                 width="128"
               >
-                <!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
                 <path
                   d="M560.3 301.2C570.7 313 588.6 315.6 602.1 306.7C616.8 296.9 620.8 277 611 262.3L563 190.3C560.2 186.1 556.4 182.6 551.9 180.1L351.4 68.7C332.1 58 308.6 58 289.2 68.7L88.8 180C83.4 183 79.1 187.4 76.2 192.8L27.7 282.7C15.1 306.1 23.9 335.2 47.3 347.8L80.3 365.5L80.3 418.8C80.3 441.8 92.7 463.1 112.7 474.5L288.7 574.2C308.3 585.3 332.2 585.3 351.8 574.2L527.8 474.5C547.9 463.1 560.2 441.9 560.2 418.8L560.2 301.3zM320.3 291.4L170.2 208L320.3 124.6L470.4 208L320.3 291.4zM278.8 341.6L257.5 387.8L91.7 299L117.1 251.8L278.8 341.6z"
                   fill="#b28d5f"
@@ -358,7 +358,7 @@
 
             <!-- Box 2 -->
             <div
-              class="py-16 px-4 rounded-lg flex flex-col items-center justify-center font-extrabold text-4xl text-[color:var(--lion)] bg-gradient-dark cursor-pointer hover:scale-105 transition transform h-full"
+              class="text-center py-16 px-4 rounded-lg flex flex-col items-center justify-center font-extrabold text-4xl text-[color:var(--lion)] bg-gradient-dark cursor-pointer hover:scale-105 transition transform h-full"
               onclick="openModal('service2')"
             >
               <svg
@@ -377,7 +377,7 @@
             </div>
             <!-- Box 3 -->
             <div
-              class="py-16 px-4 rounded-lg flex flex-col items-center justify-center font-extrabold text-4xl text-[color:var(--lion)] bg-gradient-dark cursor-pointer hover:scale-105 transition transform h-full"
+              class="text-center py-16 px-4 rounded-lg flex flex-col items-center justify-center font-extrabold text-4xl text-[color:var(--lion)] bg-gradient-dark cursor-pointer hover:scale-105 transition transform h-full"
               onclick="openModal('service3')"
             >
               <svg viewBox="0 0 640 640" height="128" width="128">
@@ -391,7 +391,7 @@
             </div>
             <!-- Box 4 -->
             <div
-              class="py-16 px-4 rounded-lg flex flex-col items-center justify-center font-extrabold text-4xl text-[color:var(--lion)] bg-gradient-dark cursor-pointer hover:scale-105 transition transform h-full"
+              class="text-center py-16 px-4 rounded-lg flex flex-col items-center justify-center font-extrabold text-4xl text-[color:var(--lion)] bg-gradient-dark cursor-pointer hover:scale-105 transition transform h-full"
               onclick="openModal('service4')"
             >
               <svg
@@ -401,11 +401,51 @@
                 width="128"
               >
                 <path
-                  d="M432 96C387.8 96 352 131.8 352 176L352 424.2L54.8 513.4C37.9 518.4 28.3 536.3 33.4 553.2C38.5 570.1 56.3 579.7 73.2 574.7L388.7 480.1L432.4 480.1C432.2 482.7 432 485.4 432 488.1C432 536.7 471.4 576.1 520 576.1C568.6 576.1 608 536.7 608 488.1L608 96.1L432 96.1zM560 488C560 510.1 542.1 528 520 528C497.9 528 480 510.1 480 488C480 465.9 497.9 448 520 448C542.1 448 559.9 465.9 560 487.9L560 488zM83.9 213.5C50.1 223.8 31.1 259.6 41.4 293.4L69.5 385.2C79.8 419 115.6 438 149.4 427.7L241.2 399.6C275 389.3 294 353.5 283.7 319.7L255.6 227.9C245.3 194.1 209.5 175.1 175.7 185.4L83.9 213.5z"
                   fill="#b28d5f"
+                  d="M64 64C46.3 64 32 78.3 32 96C32 113.7 46.3 128 64 128L136.9 128L229 404.2C206.5 421.8 192 449.2 192 480C192 533 235 576 288 576C340.4 576 383.1 534 384 481.7L586.1 414.3C602.9 408.7 611.9 390.6 606.3 373.8C600.7 357 582.6 348 565.8 353.6L363.8 421C346.6 398.9 319.9 384.5 289.8 384L197.7 107.8C188.9 81.6 164.5 64 136.9 64L64 64zM240 480C240 453.5 261.5 432 288 432C314.5 432 336 453.5 336 480C336 506.5 314.5 528 288 528C261.5 528 240 506.5 240 480zM312.5 153.3C287.3 161.5 273.5 188.6 281.7 213.8L321.3 335.5C329.5 360.7 356.6 374.5 381.8 366.3L503.5 326.7C528.7 318.5 542.5 291.4 534.3 266.2L494.8 144.5C486.6 119.3 459.5 105.5 434.3 113.7L312.5 153.3z"
                 />
               </svg>
               Transportna kolica
+            </div>
+
+            <!-- Box 5 -->
+            <div
+              class="text-center py-16 px-4 rounded-lg flex flex-col items-center justify-center font-extrabold text-4xl text-[color:var(--lion)] bg-gradient-dark cursor-pointer hover:scale-105 transition transform h-full"
+              onclick="openModal('service5')"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 640 640"
+                height="128"
+                width="128"
+              >
+                <path
+                  d="M240 64L320 64L320 120C320 133.3 330.7 144 344 144L424 144C437.3 144 448 133.3 448 120L448 64L528 64C554.5 64 576 85.5 576 112L576 528C576 554.5 554.5 576 528 576L419.2 576C427.4 561.9 432 545.5 432 528L432 368C442 354.6 448 338 448 320L448 288C448 243.8 412.2 208 368 208L192 208L192 112C192 85.5 213.5 64 240 64zM64 400L384 400L384 528C384 554.5 362.5 576 336 576L112 576C85.5 576 64 554.5 64 528L64 400zM80 256L368 256C385.7 256 400 270.3 400 288L400 320C400 337.7 385.7 352 368 352L80 352C62.3 352 48 337.7 48 320L48 288C48 270.3 62.3 256 80 256z"
+                  fill="#b28d5f"
+                />
+              </svg>
+
+              Usluge pakovanja
+            </div>
+
+            <!-- Box 6 -->
+            <div
+              class="text-center py-16 px-4 rounded-lg flex flex-col items-center justify-center font-extrabold text-4xl text-[color:var(--lion)] bg-gradient-dark cursor-pointer hover:scale-105 transition transform h-full"
+              onclick="openModal('service6')"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 640 640"
+                height="128"
+                width="128"
+              >
+                <path
+                  d="M96 32C126.9 32 152 57.1 152 88C152 118.9 126.9 144 96 144C65.1 144 40 118.9 40 88C40 57.1 65.1 32 96 32zM32 235.1C32 202.5 58.5 176 91.1 176C114.6 176 136.6 187.3 150.2 206.4L198.9 274.6C204.7 282.8 214 287.7 224 288L224 192C224 174.3 238.3 160 256 160L384 160C401.7 160 416 174.3 416 192L416 288C426 287.7 435.3 282.8 441.1 274.6L489.8 206.4C503.4 187.3 525.4 176 548.9 176C581.5 176 608 202.5 608 235.1L608 336C608 366.2 593.8 394.7 569.6 412.8L492.8 470.4C484.7 476.4 480 485.9 480 496L480 576C480 593.7 465.7 608 448 608C430.3 608 416 593.7 416 576L416 496C416 465.8 430.2 437.3 454.4 419.2L496 388L496 307.9L493.2 311.8C475.2 337 446.1 352 415.1 352L384 352C383.4 352 382.7 352 382.1 351.9C381.5 351.9 380.8 352 380.2 352L259.8 352C259.2 352 258.5 352 257.9 351.9C257.3 351.9 256.6 352 256 352L224.9 352C193.9 352 164.8 337 146.8 311.8L144 307.9L144 388L185.6 419.2C209.8 437.3 224 465.8 224 496L224 576C224 593.7 209.7 608 192 608C174.3 608 160 593.7 160 576L160 496C160 485.9 155.3 476.4 147.2 470.4L70.4 412.8C46.2 394.7 32 366.2 32 336L32 235.1zM32 443.3C35.1 446 38.3 448.7 41.6 451.2L96 492L96 576C96 593.7 81.7 608 64 608C46.3 608 32 593.7 32 576L32 443.3zM600 88C600 118.9 574.9 144 544 144C513.1 144 488 118.9 488 88C488 57.1 513.1 32 544 32C574.9 32 600 57.1 600 88zM608 576C608 593.7 593.7 608 576 608C558.3 608 544 593.7 544 576L544 492L598.4 451.2C601.7 448.7 604.9 446.1 608 443.3L608 576z"
+                  fill="#b28d5f"
+                />
+              </svg>
+
+              Diskretnost
             </div>
           </div>
         </div>
@@ -478,6 +518,7 @@
               <li><a class="hover:underline">Ključ</a></li>
               <li><a class="hover:underline">Mrkonjić Grad</a></li>
               <li><a class="hover:underline">Šipovo</a></li>
+              <li><a class="hover:underline">i ostali gradovi BiH</a></li>
             </ul>
           </div>
 
@@ -590,25 +631,36 @@
       const services = {
         service1: {
           title: "Paketske usluge",
-          description: `Specijalizovani smo za brzi kombi prevoz paketa svih veličina.
-Svaka pošiljka se pažljivo obrađuje i pravilno utovara kako bi stigla na odredište bez oštećenja.
-Nudimo fleksibilne termine dostave prema potrebama klijenata i pravovremeno obavještavamo o statusu pošiljke. 
-Bez obzira na veličinu ili količinu, vaša roba stiže sigurno, brzo i pouzdano.`,
+
+          description: `Ova sekcija pokriva sve usluge kombi transporta i logistike za manje i srednje pošiljke. Pružamo siguran i pouzdan prevoz robe, od manjih paketa do paleta, sa naglaskom na pravilno rukovanje i zaštitu prilikom transporta. Svaka pošiljka je praćena i pažljivo organizovana kako bi stigla bez oštećenja i na vrijeme. Sa nama je vaša roba u sigurnim rukama, a fleksibilnost i profesionalnost su standard.`,
         },
         service2: {
           title: "Prevoz prikolicom",
+          description: `Nudimo prevoz robe uz dodatni prostor zahvaljujući prikolicama, što omogućava transport većih količina ili teže robe koja ne stane u standardni kombi. Prikolice su sigurno pričvršćene i opremljene kako bi se spriječilo pomjeranje ili oštećenje tereta tokom vožnje. Naši vozači su stručni u pravilnom utovaru i rasporedu tereta, kako bi svaki transport protekao bez problema. Fleksibilno prilagođavamo kapacitet prikolice prema potrebama klijenata, bilo da se radi o lokalnom prevozu ili međunarodnoj isporuci. Pružamo i opcije ekspres dostave i diskretnog transporta, a tokom cijelog procesa pratimo pošiljku i pravovremeno vas obavještavamo. Sa nama je svaki transport prikolicom siguran, brz i pouzdan – vaša roba stiže na odredište neoštećena i na vrijeme.`,
+        },
+        service3: {
+          title: "Ekspres usluge",
           description: `Pružamo ekspres dostavu za pošiljke koje zahtijevaju hitan transport.
 Bilo da je riječ o istom danu ili narednom danu, naš tim je uvijek spreman da reaguje brzo i organizuje prevoz bez kašnjenja. 
 Vaša roba je u sigurnim rukama, a svi transporti se obavljaju prema vašim potrebama i prema vašem vremenu.
  Ekspres usluge su idealne za hitne pošiljke i situacije kada je brzina prioritet.`,
         },
-        service3: {
-          title: "Ekspres usluge",
-          description: `Ova sekcija pokriva sve usluge kombi transporta i logistike za manje i srednje pošiljke. Pružamo siguran i pouzdan prevoz robe, od manjih paketa do paleta, sa naglaskom na pravilno rukovanje i zaštitu prilikom transporta. Svaka pošiljka je praćena i pažljivo organizovana kako bi stigla bez oštećenja i na vrijeme. Sa nama je vaša roba u sigurnim rukama, a fleksibilnost i profesionalnost su standard`,
-        },
         service4: {
           title: "Transportna kolica",
-          description: `Nudimo prevoz robe uz dodatni prostor zahvaljujući prikolicama, što omogućava transport većih količina ili teže robe koja ne stane u standardni kombi. Prikolice su sigurno pričvršćene i opremljene kako bi se spriječilo pomjeranje ili oštećenje tereta tokom vožnje. Naši vozači su stručni u pravilnom utovaru i rasporedu tereta, kako bi svaki transport protekao bez problema. Fleksibilno prilagođavamo kapacitet prikolice prema potrebama klijenata. Pružamo i opcije ekspres dostave i diskretnog transporta, a tokom cijelog procesa pratimo pošiljku i pravovremeno vas obavještavamo. Sa nama je svaki transport prikolicom siguran, brz i pouzdan – vaša roba stiže na odredište neoštećena i na vrijeme`,
+          description: `Za sve vrste pošiljki, uključujući teže i veće pakete, koristimo specijalna transportna kolica koja omogućavaju brzu, sigurnu i efikasnu dostavu. Naša oprema i vozači osiguravaju da vaša roba stigne neoštećena, bez napora i rizika od oštećenja.
+
+Korištenjem transportnih kolica, smanjujemo fizički kontakt i rizik od nesigurnog rukovanja, što dodatno povećava sigurnost i povjerljivost transporta. Vaša pošiljka je uvijek pažljivo organizovana i stabilno smještena, bez obzira na težinu ili oblik.`,
+        },
+        service5: {
+          title: "Usluge pakovanja",
+          description: `Vaša roba zaslužuje maksimalnu pažnju i sigurnost. Naša usluga kombi prevoza uključuje profesionalno pakovanje i zaštitu svih vrsta pošiljki, od osjetljivih predmeta do težih paketa. Koristimo visokokvalitetne materijale i savremene tehnike pakovanja kako bismo osigurali da roba stigne neoštećena i u savršenom stanju. Svaki paket pažljivo označavamo i organizujemo u kombiju, čime smanjujemo rizik od oštećenja tokom transporta.`,
+        },
+        service6: {
+          title: "Diskretnost",
+          description: `Povjerljivost i privatnost su  ključne važnosti, našeg poslovanja. 
+Kada koristite našu uslugu diskretnog prevoza, možete biti sigurni da će vaša pošiljka biti tretirana s najvećom pažnjom i profesionalizmom.
+Diskretan prevoz znači da se vaša roba kreće sigurno, bez nepotrebnog otkrivanja i sa minimalnim brojem kontakata, što dodatno povećava sigurnost i povjerljivost.
+Naša filozofija je jednostavna: poštujemo vaše povjerenje i privatnost.`,
         },
       };
 
