--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
                 >
                   <li>
                     Specijalizovani smo za kombi prevoz robe na području -
-                    Mrkonjić-Grada, Banja Luke, Šipova, Jajca te Ključa te
-                    cijele Bosne i Hercegovine.
+                    Mrkonjić-Grada, Banja Luke, Šipova, Jajca, Ključa te cijele
+                    Bosne i Hercegovine.
                   </li>
                   <li>
                     Zahvaljujući našem iskustvu i posvećenosti, uspješno smo
